--- a/public_html/css/todo_layout.css
+++ b/public_html/css/todo_layout.css
@@ -27,8 +27,8 @@
     display: grid;
     grid-template-columns: 49% 51%;
     margin-left: 4%;
-    padding-top: 9%;
-    height: 5%;
+    padding-top: 0%;
+    height: 8%;
     margin-right: 0%;
     padding-left: 0%;
     position: sticky; 
@@ -64,6 +64,12 @@
 
 }
 
+.left-sidebar-header-text {
+    padding-left: 1%;
+    padding-top: 14%;
+
+}
+
 #todo-list-items-div{
     display: flex;
     flex-direction: column;
@@ -71,6 +77,7 @@
 
 #add-undo-redo-box{
     padding-left: 12%;
+    padding-top: 14%;
 }
 
 #redo-button{
