--- a/public_html/css/todo_style.css
+++ b/public_html/css/todo_style.css
@@ -107,7 +107,7 @@
     border-bottom: 1px solid;
 }
 .first_list{
-    background-color:rgb(87, 93, 105);
+    background-color:#ffc800;
 }
 .todo_button {
     cursor:pointer;
